--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^7.*",
+    "babel-preset-env": "^1.2.2",
+    "babel-preset-react": "^6.23.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
